core/pocketid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: pocketid
    app.kubernetes.io/name: pocketid
  name: pocketid
  namespace: pocketid
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: pocketid
      app.kubernetes.io/name: pocketid
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pocketid
        app.kubernetes.io/name: pocketid
    spec:
      containers:
        - name: pocketid
          image: pocketid
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1411
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 15m
              memory: 100Mi
          readinessProbe:
            httpGet:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
